--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -23,7 +23,7 @@
          </ul>
       </div>
    </nav>
-  
+
 <div class="container" id="main-container">
    <div class="modal fade" id="addEmployeeModal" tabindex="-1" role="dialog" aria-labelledby="addEmployeeModalLabel" aria-hidden="true">
       <div class="modal-dialog" role="document">
@@ -37,7 +37,7 @@
            <div class="modal-body">
               <form #addForm="ngForm" (ngSubmit)="registerUser(addForm)">
               <div class="form-group">
-                 <label for="name">Login</label>
+                 <label for="login">Login</label>
                  <input type="text" ngModel name="login" class="form-control" id="login" placeholder="Login" required>
               </div>
               <div class="form-group">
@@ -61,33 +61,33 @@
         </div>
       </div>
    </div>
-   <div class="modal fade" id="signIn" tabindex="-1" role="dialog" aria-labelledby="addEmployeeModalLabel" aria-hidden="true">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-           <div class="modal-header">
-              <h5 class="modal-title" id="addEmployeeModalLabel">Sign in</h5>
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-              </button>
-           </div>
-           <div class="modal-body">
-              <form #loginForm="ngForm" (ngSubmit)="login(loginForm)">
-              <div class="form-group">
-                 <label for="name">Email</label>
-                 <input type="text" ngModel name="login" class="form-control" id="loginSign" placeholder="Login" required>
-              </div>
-              <div class="form-group">
-                 <label for="email">Password</label>
-                 <input type="password" ngModel name="email" class="form-control" id="emailSign" placeholder="Email" required>
-              </div>
-              <div class="modal-footer">
-                 <!-- <button type="button" id="add-employee-form" class="btn btn-secondary" data-dismiss="modal">Close</button> -->
-                 <button [disabled]="addForm.invalid" type="submit" class="btn btn-primary">Sign in</button>
-              </div>
-              </form>
-           </div>
-        </div>
-      </div>
-   </div>
+<!--   <div class="modal fade" id="signIn" tabindex="-1" role="dialog" aria-labelledby="addEmployeeModalLabel" aria-hidden="true">-->
+<!--      <div class="modal-dialog" role="document">-->
+<!--        <div class="modal-content">-->
+<!--           <div class="modal-header">-->
+<!--              <h5 class="modal-title" id="addEmployeeModalLabel">Sign in</h5>-->
+<!--              <button type="button" class="close" data-dismiss="modal" aria-label="Close">-->
+<!--              <span aria-hidden="true">&times;</span>-->
+<!--              </button>-->
+<!--           </div>-->
+<!--           <div class="modal-body">-->
+<!--              <form #loginForm="ngForm" (ngSubmit)="login(loginForm)">-->
+<!--              <div class="form-group">-->
+<!--                 <label for="name">Email</label>-->
+<!--                 <input type="text" ngModel name="login" class="form-control" id="loginSign" placeholder="Login" required>-->
+<!--              </div>-->
+<!--              <div class="form-group">-->
+<!--                 <label for="email">Password</label>-->
+<!--                 <input type="password" ngModel name="email" class="form-control" id="emailSign" placeholder="Email" required>-->
+<!--              </div>-->
+<!--              <div class="modal-footer">-->
+<!--                 &lt;!&ndash; <button type="button" id="add-employee-form" class="btn btn-secondary" data-dismiss="modal">Close</button> &ndash;&gt;-->
+<!--                 <button [disabled]="addForm.invalid" type="submit" class="btn btn-primary">Sign in</button>-->
+<!--              </div>-->
+<!--              </form>-->
+<!--           </div>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--   </div>-->
 </div>
 </body>
