--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -53,7 +53,7 @@
                  <input type="text" ngModel name="phone" class="form-control" id="phone" placeholder="Phone" required>
               </div>
               <div class="modal-footer">
-                 <!-- <button type="button" id="add-employee-form" class="btn btn-secondary" data-dismiss="modal">Close</button> -->
+                <button type="button" id="add-employee-form" class="btn btn-secondary" data-dismiss="modal">Close</button>
                  <button [disabled]="addForm.invalid" type="submit" class="btn btn-primary">Register</button>
               </div>
               </form>
