--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,93 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-   <meta charset="UTF-8">
-   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body id="koka">
-   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" style="color:white;">Maybe massage?</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarColor02">
-         <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-               <a class="nav-link" (click)="onOpenModal('add')">Register <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item active">
-               <a class="nav-link" (click)="onOpenModal('login')">Sign in <span class="sr-only">(current)</span></a>
-            </li>
-         </ul>
-      </div>
-   </nav>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <a class="navbar-brand" style="color:white;">Maybe massage?</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarColor02">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" (click)="onOpenModalRegister()">Register <span class="sr-only">(current)</span></a>
+      </li>
+<!--      <li class="nav-item active">-->
+<!--        <a class="nav-link" (click)="onOpenModalLogin()">Sign in <span class="sr-only">(current)</span></a>-->
+<!--      </li>-->
+    </ul>
+  </div>
+</nav>
 
 <div class="container" id="main-container">
-   <div class="modal fade" id="addEmployeeModal" tabindex="-1" role="dialog" aria-labelledby="addEmployeeModalLabel" aria-hidden="true">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-           <div class="modal-header">
-              <h5 class="modal-title" id="addEmployeeModalLabel">Sign in</h5>
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-              </button>
-           </div>
-           <div class="modal-body">
-              <form #addForm="ngForm" (ngSubmit)="registerUser(addForm)">
-              <div class="form-group">
-                 <label for="login">Login</label>
-                 <input type="text" ngModel name="login" class="form-control" id="login" placeholder="Login" required>
-              </div>
-              <div class="form-group">
-                 <label for="email">Email Address</label>
-                 <input type="email" ngModel name="email" class="form-control" id="email" placeholder="Email" required>
-              </div>
-              <div class="form-group">
-                 <label for="phone">Password</label>
-                 <input type="password" ngModel name="password" class="form-control" id="password" placeholder="Password" required>
-              </div>
-              <div class="form-group">
-                 <label for="phone">Phone</label>
-                 <input type="text" ngModel name="phone" class="form-control" id="phone" placeholder="Phone" required>
-              </div>
-              <div class="modal-footer">
-                <button type="button" id="add-employee-form" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                 <button [disabled]="addForm.invalid" type="submit" class="btn btn-primary">Register</button>
-              </div>
-              </form>
-           </div>
-        </div>
-      </div>
-   </div>
-<!--   <div class="modal fade" id="signIn" tabindex="-1" role="dialog" aria-labelledby="addEmployeeModalLabel" aria-hidden="true">-->
-<!--      <div class="modal-dialog" role="document">-->
-<!--        <div class="modal-content">-->
-<!--           <div class="modal-header">-->
-<!--              <h5 class="modal-title" id="addEmployeeModalLabel">Sign in</h5>-->
-<!--              <button type="button" class="close" data-dismiss="modal" aria-label="Close">-->
-<!--              <span aria-hidden="true">&times;</span>-->
-<!--              </button>-->
-<!--           </div>-->
-<!--           <div class="modal-body">-->
-<!--              <form #loginForm="ngForm" (ngSubmit)="login(loginForm)">-->
-<!--              <div class="form-group">-->
-<!--                 <label for="name">Email</label>-->
-<!--                 <input type="text" ngModel name="login" class="form-control" id="loginSign" placeholder="Login" required>-->
-<!--              </div>-->
-<!--              <div class="form-group">-->
-<!--                 <label for="email">Password</label>-->
-<!--                 <input type="password" ngModel name="email" class="form-control" id="emailSign" placeholder="Email" required>-->
-<!--              </div>-->
-<!--              <div class="modal-footer">-->
-<!--                 &lt;!&ndash; <button type="button" id="add-employee-form" class="btn btn-secondary" data-dismiss="modal">Close</button> &ndash;&gt;-->
-<!--                 <button [disabled]="addForm.invalid" type="submit" class="btn btn-primary">Sign in</button>-->
-<!--              </div>-->
-<!--              </form>-->
-<!--           </div>-->
-<!--        </div>-->
-<!--      </div>-->
-<!--   </div>-->
+
+  <!--   <div class="modal fade" id="signIn" tabindex="-1" role="dialog" aria-labelledby="addEmployeeModalLabel" aria-hidden="true">-->
+  <!--      <div class="modal-dialog" role="document">-->
+  <!--        <div class="modal-content">-->
+  <!--           <div class="modal-header">-->
+  <!--              <h5 class="modal-title" id="addEmployeeModalLabel">Sign in</h5>-->
+  <!--              <button type="button" class="close" data-dismiss="modal" aria-label="Close">-->
+  <!--              <span aria-hidden="true">&times;</span>-->
+  <!--              </button>-->
+  <!--           </div>-->
+  <!--           <div class="modal-body">-->
+  <!--              <form #loginForm="ngForm" (ngSubmit)="login(loginForm)">-->
+  <!--              <div class="form-group">-->
+  <!--                 <label for="name">Email</label>-->
+  <!--                 <input type="text" ngModel name="login" class="form-control" id="loginSign" placeholder="Login" required>-->
+  <!--              </div>-->
+  <!--              <div class="form-group">-->
+  <!--                 <label for="email">Password</label>-->
+  <!--                 <input type="password" ngModel name="email" class="form-control" id="emailSign" placeholder="Email" required>-->
+  <!--              </div>-->
+  <!--              <div class="modal-footer">-->
+  <!--                 &lt;!&ndash; <button type="button" id="add-employee-form" class="btn btn-secondary" data-dismiss="modal">Close</button> &ndash;&gt;-->
+  <!--                 <button [disabled]="addForm.invalid" type="submit" class="btn btn-primary">Sign in</button>-->
+  <!--              </div>-->
+  <!--              </form>-->
+  <!--           </div>-->
+  <!--        </div>-->
+  <!--      </div>-->
+  <!--   </div>-->
 </div>
 </body>
