--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -15,7 +15,7 @@
   <div class="collapse navbar-collapse" id="navbarColor02">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" (click)="onOpenModalRegister()">Register <span class="sr-only">(current)</span></a>
+        <button class="nav-link" (click)="onOpenModalRegister()">Register <span class="sr-only">(current)</span></button>
       </li>
 <!--      <li class="nav-item active">-->
 <!--        <a class="nav-link" (click)="onOpenModalLogin()">Sign in <span class="sr-only">(current)</span></a>-->
@@ -25,7 +25,7 @@
 </nav>
 
 <div class="container" id="main-container">
-
+  <app-register-modal></app-register-modal>
   <!--   <div class="modal fade" id="signIn" tabindex="-1" role="dialog" aria-labelledby="addEmployeeModalLabel" aria-hidden="true">-->
   <!--      <div class="modal-dialog" role="document">-->
   <!--        <div class="modal-content">-->
