--- a/client/src/app/popupModal/register-modal/register-modal.component.html
+++ b/client/src/app/popupModal/register-modal/register-modal.component.html
@@ -4,40 +4,40 @@
     <p>
       Rejestracja
     </p>
-    <div class="modal-content">
+    <div class="modal-content" *ngIf="registered==true">
+      <div class="modal-footer">
+        Zarejestrowano pomyślnie. <a (click)="openLoginModal()"> &nbsp;Zaloguj się</a>
+      </div>
+    </div>
+    <div class="modal-content" *ngIf="registered==false">
       <div class="modal-body">
         <form [formGroup]="formGroup"  (ngSubmit)="registerUser()">
           <div class="form-group">
             <label for="login">Login</label>
-            <input *ngIf="!registered" formControlName="login" type="text" name="login" class="form-control" id="login" placeholder="Login" required> <!--{{userForm?.login}}-->
+            <input formControlName="login" type="text" name="login" class="form-control" id="login" placeholder="Login" required> <!--{{userForm?.login}}-->
             <div class="isValid" *ngIf="formGroup.controls['login'].invalid && submitted != false">
               Login musi posiadać przynajmniej 3 litery
             </div>
           </div>
           <div class="form-group">
             <label for="phone">Password</label>
-            <input *ngIf="!registered" formControlName="password" type="password" name="password" class="form-control" id="password" placeholder="Password" required>
+            <input formControlName="password" type="password" name="password" class="form-control" id="password" placeholder="Password" required>
             <div class="isValid" *ngIf="formGroup.controls['password'].invalid && submitted != false">
               Hasło musi posiadać małą i duża literę oraz przynajmniej jedną cyfrę
             </div>
           </div>
           <div class="form-group">
             <label for="email">Email Address</label>
-            <input *ngIf="!registered" formControlName="email" type="email" name="email" class="form-control" id="email" placeholder="Email" required>
+            <input formControlName="email" type="email" name="email" class="form-control" id="email" placeholder="Email" required>
             <div class="isValid" *ngIf="formGroup.controls['password'].invalid && submitted != false">
               To raczej nie jest e-mailem
             </div>
           </div>
           <div class="form-group">
             <label for="phone">Phone</label>
-            <input *ngIf="!registered" formControlName="phone" type="text" name="phone" class="form-control" id="phone" placeholder="Phone" required>
+            <input formControlName="phone" type="text" name="phone" class="form-control" id="phone" placeholder="Phone" required>
             <div class="isValid" *ngIf="formGroup.controls['password'].invalid && submitted != false">
               to to tam chuj
-            </div>
-          </div>
-          <div *ngIf="registered==true">
-            <div class="modal-footer" style="width: 100%;text-align: center;">
-                Zarejestrowano pomyślnie. <a (click)="openLoginModal()"> &nbsp;Zaloguj się</a>
             </div>
           </div>
           <div class="modal-footer">
