--- a/client/src/app/popupModal/register-modal/register-modal.component.html
+++ b/client/src/app/popupModal/register-modal/register-modal.component.html
@@ -13,31 +13,17 @@
       <div class="modal-body">
         <form [formGroup]="formGroup"  (ngSubmit)="registerUser()">
           <div class="form-group">
-            <label for="login">Login</label>
-            <input formControlName="login" type="text" name="login" class="form-control" id="login" placeholder="Login" required> <!--{{userForm?.login}}-->
-            <div class="isValid" *ngIf="formGroup.controls['login'].invalid && submitted != false">
-              Login musi posiadać przynajmniej 3 litery
-            </div>
-          </div>
-          <div class="form-group">
-            <label for="phone">Password</label>
-            <input formControlName="password" type="password" name="password" class="form-control" id="password" placeholder="Password" required>
-            <div class="isValid" *ngIf="formGroup.controls['password'].invalid && submitted != false">
-              Hasło musi posiadać małą i duża literę oraz przynajmniej jedną cyfrę
-            </div>
-          </div>
-          <div class="form-group">
             <label for="email">Email Address</label>
             <input formControlName="email" type="email" name="email" class="form-control" id="email" placeholder="Email" required>
-            <div class="isValid" *ngIf="formGroup.controls['password'].invalid && submitted != false">
+            <div class="isValid" *ngIf="formGroup.controls['email'].invalid && submitted != false">
               To raczej nie jest e-mailem
             </div>
           </div>
           <div class="form-group">
-            <label for="phone">Phone</label>
-            <input formControlName="phone" type="text" name="phone" class="form-control" id="phone" placeholder="Phone" required>
+            <label for="password">Password</label>
+            <input formControlName="password" type="password" name="password" class="form-control" id="password" placeholder="Password" required>
             <div class="isValid" *ngIf="formGroup.controls['password'].invalid && submitted != false">
-              to to tam chuj
+              Hasło musi posiadać małą i duża literę oraz przynajmniej jedną cyfrę
             </div>
           </div>
           <div class="modal-footer">
