register validation pt.2

--- a/client/src/app/popupModal/login-modal/login-modal.component.html
+++ b/client/src/app/popupModal/login-modal/login-modal.component.html
@@ -6,11 +6,11 @@
     <div class="modal-body">
       <form [formGroup]="formGroup" (ngSubmit)="login()">
         <div class="form-group">
-          <label for="email">Email</label>
+          <label for="email">E-mail</label>
           <input formControlName="email" type="text" name="email" class="form-control" id="email" placeholder="email" required>
         </div>
         <div class="form-group">
-          <label for="password">Password</label>
+          <label for="password">Hasło</label>
           <input formControlName="password" type="password" name="password" class="form-control" id="password" placeholder="password" required>
         </div>
         <div class="modal-footer">
