--- a/client/src/app/popupModal/register-modal/register-modal.component.html
+++ b/client/src/app/popupModal/register-modal/register-modal.component.html
@@ -13,17 +13,23 @@
       <div class="modal-body">
         <form [formGroup]="formGroup"  (ngSubmit)="registerUser()">
           <div class="form-group">
-            <label for="email">Email Address</label>
+            <label for="email">E-mail</label>
             <input formControlName="email" type="email" name="email" class="form-control" id="email" placeholder="Email" required>
             <div class="isValid" *ngIf="formGroup.controls['email'].invalid && submitted != false">
               To raczej nie jest e-mailem
             </div>
           </div>
           <div class="form-group">
-            <label for="password">Password</label>
+            <label for="password">Hasło</label>
             <input formControlName="password" type="password" name="password" class="form-control" id="password" placeholder="Password" required>
             <div class="isValid" *ngIf="formGroup.controls['password'].invalid && submitted != false">
               Hasło musi posiadać małą i duża literę oraz przynajmniej jedną cyfrę
+            </div>
+          </div>
+          <div class="form-group">
+            <input type="checkbox" formControlName="terms" required> Akceptuję regulamin
+            <div *ngIf="formGroup.controls['terms'].invalid && submitted != false" style="color: red">
+              Musisz zaakceptować regulamin, aby zarejestrować się.
             </div>
           </div>
           <div class="modal-footer">
