--- a/client/src/app/nav/nav-logged/nav-logged.component.html
+++ b/client/src/app/nav/nav-logged/nav-logged.component.html
@@ -1,1 +1,14 @@
-<p>nav-logged works!</p>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <a class="navbar-brand" style="color:white;">Drinki</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarColor02">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+<!--        <a class="nav-link" (click)="onOpenModalLogin()">Sign in <span class="sr-only">(current)</span></a>-->
+        <a class="nav-link" (click)="logout()">Wyloguj się <span class="sr-only">(current)</span></a>
+      </li>
+    </ul>
+  </div>
+</nav>
