--- a/client/src/app/nav/nav-logged/nav-logged.component.html
+++ b/client/src/app/nav/nav-logged/nav-logged.component.html
@@ -10,13 +10,13 @@
         <a class="nav-link" (click)="logout()">Wyloguj się <span class="sr-only">(current)</span></a>
       </li>
 <!--      <li class="nav-item active" *ngIf="userHasRole('USER')">-->
-      <li class="nav-item active" *ngIf="userHasRole('USER')">
+      <li class="nav-item active" *ngIf="auth.isUser()">
         <!--        <a class="nav-link" (click)="onOpenModalLogin()">Sign in <span class="sr-only">(current)</span></a>-->
-        hej huj
+        user
       </li>
-      <li class="nav-item active" *ngIf="userHasRole('ADMIN')">
+      <li class="nav-item active" *ngIf="auth.isAdmin()">
         <!--        <a class="nav-link" (click)="onOpenModalLogin()">Sign in <span class="sr-only">(current)</span></a>-->
-        hej huj
+        admin
       </li>
     </ul>
   </div>
