--- a/client/src/app/index/index.component.html
+++ b/client/src/app/index/index.component.html
@@ -4,5 +4,5 @@
 <div *ngIf="!authService.isUserLoggedIn()">
   <app-nav-unlogged></app-nav-unlogged>
 </div>
-<app-welcomepage></app-welcomepage>
+<!--<app-welcomepage></app-welcomepage>-->
 
