--- a/client/src/app/nav/nav-logged/nav-logged.component.html
+++ b/client/src/app/nav/nav-logged/nav-logged.component.html
@@ -1,13 +1,10 @@
 <!--<nav class="navbar navbar-expand-lg navbar-dark bg-dark">-->
-<!--  <a class="navbar-brand" style="color:white;">Drinki</a>-->
+<!--  <a class="navbar-brand" style="color:white; margin-left: 5%;">Drinki</a>-->
 <!--  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">-->
 <!--    <span class="navbar-toggler-icon"></span>-->
 <!--  </button>-->
 <!--  <div class="collapse navbar-collapse" id="navbarColor02">-->
 <!--    <ul class="navbar-nav mr-auto">-->
-<!--      <li class="nav-item active">-->
-<!--        <a class="nav-link" (click)="logout()">Wyloguj się <span class="sr-only">(current)</span></a>-->
-<!--      </li>-->
 <!--      <li class="nav-item active" *ngIf="auth.isUser()">-->
 <!--        user-->
 <!--      </li>-->
@@ -15,25 +12,26 @@
 <!--        admin-->
 <!--      </li>-->
 <!--    </ul>-->
+<!--  <a class="nav-link" (click)="logout()" style="float:right;color:white; margin-right: 5%;">Wyloguj się<span class="sr-only">(current)</span></a>-->
 <!--  </div>-->
 <!--</nav>-->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" style="color:white; margin-left: 5%;">Drinki</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
+<nav class="onavbar">
+  <a style="">Drinki</a>
+  <button class="" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
+    <span class=""></span>
   </button>
-  <div class="collapse navbar-collapse" id="navbarColor02">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active" *ngIf="auth.isUser()">
+    <ul class="collapse navbar-collapse" id="navbarColor02">
+      <li *ngIf="auth.isUser()">
         user
       </li>
-      <li class="nav-item active" *ngIf="auth.isAdmin()">
-        admin
+      <li *ngIf="auth.isAdmin()">
+        fs
+      </li>
+      <li (click)="logout()">
+        Wyloguj się
+      </li>
+      <li>
+        <a (click)="logout()">Wyloguj się</a>
       </li>
     </ul>
-<!--  </div>-->
-<!--  <a class="nav-link" (click)="logout()" style="float:right;color:white;">Wyloguj się <span class="sr-only">(current)</span></a>-->
-<!--  <a class="nav-link" (click)="logout()" style="float:right;color:white;">Wyloguj się <span class="sr-only">(current)</span></a>-->
-  <a class="nav-link" (click)="logout()" style="float:right;color:white; margin-right: 5%;">Wyloguj się<span class="sr-only">(current)</span></a>
-  </div>
 </nav>
