--- a/client/src/app/welcomepage/welcomepage.component.css
+++ b/client/src/app/welcomepage/welcomepage.component.css
@@ -7,3 +7,12 @@
   width: 100%;
   height: 30%;
 }
+
+/*.banner{*/
+/*  width: 100%;*/
+/*  height: 100vh;*/
+/*  background-image: linear-gradient(rgba(0,0,0,0.75), rgba(0,0,0,0.75)), url("../../assets/img/random.jpeg");*/
+/*  background-size: cover;*/
+/*  background-position: center;*/
+/*  !*position: fixed;*!*/
+/*}*/
