--- a/client/src/app/welcomepage/welcomepage.component.html
+++ b/client/src/app/welcomepage/welcomepage.component.html
@@ -1,21 +1,27 @@
-<div id="przykladowaKaruzela2" class="carousel slide" data-ride="carousel" style="margin-top: 15px;">
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img class="d-block w-100" src="../../assets/img/1xx.png" alt="Pierwszy slajd">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="../../assets/img/2xx.png" alt="Drugi slajd">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="../../assets/img/4xx.png" alt="Trzeci slajd">
-    </div>
-  </div>
-  <a class="carousel-control-prev" href="#przykladowaKaruzela2" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Poprzedni</span>
-  </a>
-  <a class="carousel-control-next" href="#przykladowaKaruzela2" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Następny</span>
-  </a>
+<div class="banner" appFadeBackground>
+
 </div>
+<div style="display: block">
+</div>
+
+<!--<div id="przykladowaKaruzela2" class="carousel slide" data-ride="carousel" style="margin-top: 15px;">-->
+<!--  <div class="carousel-inner">-->
+<!--    <div class="carousel-item active">-->
+<!--      <img class="d-block w-100" src="../../assets/img/1xx.png" alt="Pierwszy slajd">-->
+<!--    </div>-->
+<!--    <div class="carousel-item">-->
+<!--      <img class="d-block w-100" src="../../assets/img/2xx.png" alt="Drugi slajd">-->
+<!--    </div>-->
+<!--    <div class="carousel-item">-->
+<!--      <img class="d-block w-100" src="../../assets/img/4xx.png" alt="Trzeci slajd">-->
+<!--    </div>-->
+<!--  </div>-->
+<!--  <a class="carousel-control-prev" href="#przykladowaKaruzela2" role="button" data-slide="prev">-->
+<!--    <span class="carousel-control-prev-icon" aria-hidden="true"></span>-->
+<!--    <span class="sr-only">Poprzedni</span>-->
+<!--  </a>-->
+<!--  <a class="carousel-control-next" href="#przykladowaKaruzela2" role="button" data-slide="next">-->
+<!--    <span class="carousel-control-next-icon" aria-hidden="true"></span>-->
+<!--    <span class="sr-only">Następny</span>-->
+<!--  </a>-->
+<!--</div>-->
