--- a/client/src/app/nav/nav-logged/nav-logged.component.html
+++ b/client/src/app/nav/nav-logged/nav-logged.component.html
@@ -15,23 +15,101 @@
 <!--  <a class="nav-link" (click)="logout()" style="float:right;color:white; margin-right: 5%;">Wyloguj się<span class="sr-only">(current)</span></a>-->
 <!--  </div>-->
 <!--</nav>-->
+
+
 <nav class="onavbar">
-  <a style="">Drinki</a>
-  <button class="" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
-    <span class=""></span>
-  </button>
-    <ul class="collapse navbar-collapse" id="navbarColor02">
-      <li *ngIf="auth.isUser()">
-        user
-      </li>
-      <li *ngIf="auth.isAdmin()">
-        fs
-      </li>
-      <li (click)="logout()">
-        Wyloguj się
-      </li>
-      <li>
-        <a (click)="logout()">Wyloguj się</a>
-      </li>
-    </ul>
+  <ul>
+    <li>
+      <a class="icon">
+        coctails-api
+      </a>
+    </li>
+  </ul>
+  <ul>
+    <li>
+      Sociale
+    </li>
+    <li>
+      Drineczki
+    </li>
+    <li>
+      Kurs
+    </li>
+  </ul>
+<!-- ----------- -->
+<!--  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">-->
+<!--    <span class="navbar-toggler-icon"></span>-->
+<!--  </button>-->
+  <ul>
+    <li *ngIf="auth.isUser()">
+      USER EMAIL
+    </li>
+    <li *ngIf="auth.isAdmin()">
+      ADMIN EMAIL
+    </li>
+    <li class="logout" (click)="logout()">
+      Wyloguj się
+    </li>
+  </ul>
 </nav>
+
+<!-- ----------- -->
+
+<!--&lt;!&ndash; Navbar &ndash;&gt;-->
+<!--<nav class="navbar navbar-expand-lg navbar-light bg-light">-->
+<!--  &lt;!&ndash; Container wrapper &ndash;&gt;-->
+<!--  <div class="container">-->
+<!--    &lt;!&ndash; Navbar brand &ndash;&gt;-->
+<!--    <a class="navbar-brand me-2" href="https://mdbgo.com/">-->
+<!--      <img-->
+<!--        src="https://mdbcdn.b-cdn.net/img/logo/mdb-transaprent-noshadows.webp"-->
+<!--        height="16"-->
+<!--        alt="MDB Logo"-->
+<!--        loading="lazy"-->
+<!--        style="margin-top: -1px;"-->
+<!--      />-->
+<!--    </a>-->
+
+<!--    &lt;!&ndash; Toggle button &ndash;&gt;-->
+<!--    <button-->
+<!--      class="navbar-toggler"-->
+<!--      type="button"-->
+<!--      data-mdb-toggle="collapse"-->
+<!--      data-mdb-target="#navbarButtonsExample"-->
+<!--      aria-controls="navbarButtonsExample"-->
+<!--      aria-expanded="false"-->
+<!--      aria-label="Toggle navigation"-->
+<!--    >-->
+<!--      <i class="fas fa-bars"></i>-->
+<!--    </button>-->
+
+<!--    &lt;!&ndash; Collapsible wrapper &ndash;&gt;-->
+<!--    <div class="collapse navbar-collapse" id="navbarButtonsExample">-->
+<!--      &lt;!&ndash; Left links &ndash;&gt;-->
+<!--      <ul class="navbar-nav me-auto mb-2 mb-lg-0">-->
+<!--        <li class="nav-item">-->
+<!--          <a class="nav-link" href="#">Dashboard</a>-->
+<!--        </li>-->
+<!--      </ul>-->
+<!--      &lt;!&ndash; Left links &ndash;&gt;-->
+
+<!--      <div class="d-flex align-items-center">-->
+<!--        <button type="button" class="btn btn-link px-3 me-2">-->
+<!--          Login-->
+<!--        </button>-->
+<!--        <button type="button" class="btn btn-primary me-3">-->
+<!--          Sign up for free-->
+<!--        </button>-->
+<!--        <a-->
+<!--          class="btn btn-dark px-3"-->
+<!--          href="https://github.com/mdbootstrap/mdb-ui-kit"-->
+<!--          role="button"-->
+<!--        ><i class="fab fa-github"></i-->
+<!--        ></a>-->
+<!--      </div>-->
+<!--    </div>-->
+<!--    &lt;!&ndash; Collapsible wrapper &ndash;&gt;-->
+<!--  </div>-->
+<!--  &lt;!&ndash; Container wrapper &ndash;&gt;-->
+<!--</nav>-->
+<!--&lt;!&ndash; Navbar &ndash;&gt;-->
