--- a/client/src/app/welcomepage/welcomepage.component.html
+++ b/client/src/app/welcomepage/welcomepage.component.html
@@ -1,8 +1,8 @@
-<div class="banner" appFadeBackground>
+<!--<div class="banner" appFadeBackground>-->
 
-</div>
-<div style="display: block">
-</div>
+<!--</div>-->
+<!--<div style="display: block">-->
+<!--</div>-->
 
 <!--<div id="przykladowaKaruzela2" class="carousel slide" data-ride="carousel" style="margin-top: 15px;">-->
 <!--  <div class="carousel-inner">-->
@@ -25,3 +25,32 @@
 <!--    <span class="sr-only">Następny</span>-->
 <!--  </a>-->
 <!--</div>-->
+
+<header>
+  <div class="header-content">
+    <h2>Poznaj nowe smaki</h2>
+    <div class="line"></div>
+    <h1>Serwuj najlepsze drinki</h1>
+    <a href="/" class="ctn">explore drinks world</a>
+  </div>
+</header>
+
+<!-- == EVENTS ==-->
+<section class="events">
+  <div class="title">
+    <h1>Upcoming events</h1>
+    <div class="line"></div>
+  </div>
+  <div class="row-content">
+    <div class="col-content">
+      <img src="../../assets/img/rsz_nm1.jpg" alt="">
+      <h4>elo elo</h4>
+      <p href="">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium commodi debitis inventore magni sit voluptas.</p>
+    </div>
+    <div class="col-content">
+      <img src="../../assets/img/rsz_nm2.jpg" alt="">
+      <h4>elo drineczki</h4>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium commodi debitis inventore magni sit voluptas.</p>
+    </div>
+  </div>
+</section>
