--- a/client/src/app/welcomepage/welcomepage.component.css
+++ b/client/src/app/welcomepage/welcomepage.component.css
@@ -8,11 +8,115 @@
   height: 30%;
 }
 
-/*.banner{*/
-/*  width: 100%;*/
-/*  height: 100vh;*/
-/*  background-image: linear-gradient(rgba(0,0,0,0.75), rgba(0,0,0,0.75)), url("../../assets/img/random.jpeg");*/
-/*  background-size: cover;*/
-/*  background-position: center;*/
-/*  !*position: fixed;*!*/
-/*}*/
+/*CONTENT*/
+
+.events h1 {
+  color: #041836
+}
+
+header {
+  width:  100vw;
+  height: 100vh;
+  background-image: url("../../assets/img/nm1.jpeg");
+  background-position: bottom;
+  background-size: cover;
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+}
+
+.header-content{
+  margin-bottom: 100px;
+  color: whitesmoke;
+  text-align: center;
+}
+
+.header-content h2{
+  font-size: 4vmin;
+}
+
+.line{
+  width: 150px;
+  height: 4px;
+  background: gold;
+  margin: 10px auto;
+  border-radius: 5px;
+}
+
+.header-content h1{
+  font-size: 6vmin;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+.ctn{
+  padding: 8px 15px;
+  background: gold;
+  border-radius: 30px;
+  color: whitesmoke;
+}
+
+a {
+  text-decoration: none;
+}
+
+.content-row img{
+  margin: 15px 15px;
+  max-width: 100%;
+  height: 250px;
+  padding: 0 20px;
+}
+
+.line{
+  width: 150px;
+  height: 4px;
+  background: gold;
+  margin: 10px auto;
+  border-radius: 5px;
+}
+
+
+section {
+  width: 80%;
+  margin: 80px auto;
+}
+
+.title {
+  text-align: center;
+  font-size: 4vmin;
+  color: cornflowerblue;
+}
+
+.row-content {
+  display: flex;
+  align-content: center;
+  width: 100%;
+  justify-content: space-between;
+}
+
+.row-content img {
+  width: 90%;
+}
+
+.row-content .col-content{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.events .row-content {
+  margin-top: 50px;
+}
+
+h4 {
+  font-size: 3vmin;
+  color: #333333;
+  margin: 10px auto;
+}
+
+p {
+  color: gold;
+  padding: 0 40px;
+}
+
+
