--- a/client/src/app/nav/nav-unlogged/nav-unlogged.component.html
+++ b/client/src/app/nav/nav-unlogged/nav-unlogged.component.html
@@ -18,14 +18,12 @@
 
 <nav class="navbar-content">
   <h1 class="logo">coctails-api</h1>
-  <ul class="nav-links">
-    <li>cscs</li>
-    <li>cscs</li>
-    <li>cscs</li>
-    <li>cscs</li>
-  </ul>
   <ul class="nav-links" [ngClass]="{'mobile-menu': isOpen}">
-    <li class="nav-link" (click)="onOpenModalRegister()">
+    <li class="ctn-log">page1</li>
+    <li class="ctn-log">page2</li>
+    <li class="ctn-log">page3</li>
+    <li class="ctn-log">page4</li>
+    <li class="ctn-log" (click)="onOpenModalRegister()">
       Zaloguj się
     </li>
     <li class="ctn" (click)="onOpenModalLogin()">
