postgres conf. with docker pt.2

--- a/client/src/app/nav/nav-unlogged/nav-unlogged.component.html
+++ b/client/src/app/nav/nav-unlogged/nav-unlogged.component.html
@@ -26,7 +26,7 @@
     <li class="ctn-log" (click)="onOpenModalRegister()">
       Zaloguj się
     </li>
-    <li class="ctn" (click)="onOpenModalLogin()">
+    <li class="ctn" (click)="onOpenModalRegister()">
       Rejestracja
     </li>
   </ul>
