--- a/client/src/app/nav/nav-logged/nav-logged.component.html
+++ b/client/src/app/nav/nav-logged/nav-logged.component.html
@@ -18,7 +18,7 @@
 
 
 <nav class="navbar-content">
-  <h1 class="logo">coctails-api</h1>
+  <h1 routerLink="" class="logo">coctails-api</h1>
   <ul class="nav-links" [ngClass]="{'mobile-menu': isOpen}">
     <li *ngIf="auth.isUser()">
       USER EMAIL
