--- a/client/src/app/aaapages/admin/discount-panel/discount-panel.component.css
+++ b/client/src/app/aaapages/admin/discount-panel/discount-panel.component.css
@@ -8,3 +8,23 @@
 .custom-input {
   align-items: center;
 }
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+  border: 2px solid #3F51B5;
+}
+
+td {
+  text-align: center;
+  width: 25%;
+}
+
+tr:nth-child(odd) {
+  background-color: #f2f2f2;
+}
+
+button {
+  align-items: center;
+  height: 100%;
+}
