--- a/client/src/app/aaapages/admin/nav/nav-admin/nav-admin.component.css
+++ b/client/src/app/aaapages/admin/nav/nav-admin/nav-admin.component.css
@@ -17,7 +17,7 @@
   margin: auto;
   width: 100%;
   justify-content: space-between;
-  padding: 20px 40px;
+  /*padding: 20px 40px;*/
   color: whitesmoke;
 }
 
